# profile.mobile.apps.native.taskmanager

./: .cproject  .project  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  LICENSE.Flora  NOTICE  org.tizen.task-mgr-1.0.0-arm-debug.tpk  org.tizen.task-mgr-1.0.0-arm.tpk  org.tizen.task-mgr-1.0.0-arm_debug.tpk  org.tizen.task-mgr-1.0.0-i386-debug.tpk  org.tizen.task-mgr-1.0.0-i386.tpk  org.tizen.task-mgr-1.0.0-i386_debug.tpk  org.tizen.task-mgr.manifest  org.tizen.task-mgr.xml  org.tizen.taskmgr.desktop.in  org.tizen.taskmgr.manifest  org.tizen.taskmgr.rule  org.tizen.taskmgr.xml  project.config  project_def.prop  taskmgr.manifest  tizen-manifest.xml
CMake/: CMakeLists.txt
CMake/res/: CMakeLists.txt
CMake/res/edje/: CMakeLists.txt
CMake/res/po/: CMakeLists.txt
data/: CMakeLists.txt  org.tizen.task-mgr.efl  org.tizen.task-mgr.xml  taskmgr.edc
data/themes/: theme_taskmanager.edc
debian/: changelog  control  copyright  org.tizen.taskmgr.install.in  org.tizen.taskmgr.postinst  rules
inc/: conf.h  item.h  list.h  log.h  main.h  scroller.h  util.h
include/: conf.h  list.h  main.h  scroller.h  util.h
packaging/: org.tizen.task-mgr.spec  org.tizen.taskmgr.manifest  org.tizen.taskmgr.spec
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  en_PH.po  en_US.po  es.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  it_IT.po  ja.po  ja_JP.po  ka.po  kk.po  ko.po  (+29 more)
res/: CMakeLists.txt
res/edje/: CMakeLists.txt  box.edc  conf.h  item.edc  layout.edc
res/po/: POTFILES.in  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  lo.po  lt.po  lv.po  mk.po  (+32 more)
src/: .util.c.swp  _cpu.c  _cpu.h  _eina.c  _eina.h  _genlist.c  _genlist.h  _info.c  _info.h  _logic.c  _logic.h  _progressbar.c  _progressbar.h  _util_efl.c  _util_efl.h  _util_log.h  item.c  list.c  main.c  scroller.c  taskmanager.c  taskmanager.h  util.c
