CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(task-mgr C)

SET(INSTALL_EXEC_PREFIX "${INSTALL_PREFIX}/bin")
SET(INSTALL_RESDIR "${INSTALL_PREFIX}/res")
SET(INSTALL_IMAGEDIR "${INSTALL_RESDIR}/images")
SET(EDJEDIR "${INSTALL_RESDIR}/edje")
SET(LOCALEDIR "${INSTALL_RESDIR}/locale")
SET(CMAKE_VERBOSE_MAKEFILE 0)

SET(PROJECT_ROOT_DIR "${CMAKE_SOURCE_DIR}/..")
SET(PROJECT_RESOURCES_DIR "${PROJECT_ROOT_DIR}/res")
SET(PROJECT_EDC_DIR "${PROJECT_RESOURCES_DIR}/edje")
SET(PROJECT_IMAGES_DIR "${PROJECT_RESOURCES_DIR}/images")
SET(PROJECT_PO_DIR "${PROJECT_RESOURCES_DIR}/po")

INCLUDE(FindPkgConfig)
pkg_check_modules(MENU_PKGS REQUIRED
	appcore-efl
	evas
	edje
	elementary
	ecore
	eina
	capi-appfw-application
	capi-system-info
	capi-appfw-package-manager
	capi-appfw-app-manager
	dlog
	pkgmgr-info
	feedback
	context
)

FOREACH (flag ${MENU_PKGS_CFLAGS})
    SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden -Wall -Winline -g -fno-builtin-malloc -fPIE")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")

INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/inc)

ADD_EXECUTABLE(${PROJECT_NAME}
	${PROJECT_ROOT_DIR}/src/item.c
	${PROJECT_ROOT_DIR}/src/list.c
	${PROJECT_ROOT_DIR}/src/main.c
	${PROJECT_ROOT_DIR}/src/scroller.c
	${PROJECT_ROOT_DIR}/src/util.c
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} -lm)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MENU_PKGS_LDFLAGS})

# Install
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_EXEC_PREFIX})

INSTALL(FILES ${PROJECT_ROOT_DIR}/tizen-manifest.xml DESTINATION ${SYS_PACKAGES_DIR} RENAME org.tizen.task-mgr.xml)
INSTALL(DIRECTORY DESTINATION ${PREFIX}/data)
INSTALL(FILES ${PROJECT_ROOT_DIR}/shared/res/task-mgr.png DESTINATION ${SYS_ICONS_DIR})

# End of a file
ADD_SUBDIRECTORY(res)
